Feature/resp 01 (#8)
* Criando estrutura básica

* Criando estrutura básica - application

* Criando JPA config

* Criando Exception

* Ajuste no delete

* Criando horario disponivel - (POST)

* Buscando horario disponivel, por id do prestador - (GET)

* Filtro de hoario disponivel, apresentar somente os horarios disponiveis - (GET)

* Ajustes checkstyle

* Cadastro/alteração de agenda disponivel

* Teste

* Incluindo o openapi

* Ajustes nas exceptions

* Ajustes nas exceptions - parte 2

* Ajustes nas exceptions - parte 3

* openApi

---------
