# service-schedule/src/main/java/com/serviceschedule/controller/ServiceScheduleController.java
@@ -1,8 +1,10 @@
 package com.serviceschedule.controller;
 
 import com.serviceschedule.exception.HorarioDisponivelException;
+import com.serviceschedule.exception.HorarioDuplicadoException;
 import com.serviceschedule.exception.HorarioNaoDisponivelException;
 import com.serviceschedule.exception.HorarioNaoEncontradoException;
+import com.serviceschedule.exception.PrestadorDuplicadoException;
 import com.serviceschedule.exception.PrestadorNaoEncontradoException;
 import com.serviceschedule.model.Horario;
 import com.serviceschedule.model.ServiceScheduleModel;
@@ -11,6 +13,7 @@ import java.util.List;
 import java.util.Optional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -44,12 +47,14 @@ public class ServiceScheduleController {
                 .orElseGet(() -> new ResponseEntity<>(HttpStatus.NOT_FOUND));
     }
 
-    @PostMapping
-    public ResponseEntity<ServiceScheduleModel> savePrestador(@RequestBody ServiceScheduleModel prestadorServico) {
-
-        final ServiceScheduleModel savedPrestador = serviceScheduleService.savePrestador(prestadorServico);
-
-        return new ResponseEntity<>(savedPrestador, HttpStatus.CREATED);
+    @PostMapping("/cadastrar")
+    public ResponseEntity<String> savePrestador(@RequestBody ServiceScheduleModel prestadorServico) {
+        try {
+            final ServiceScheduleModel savedPrestador = serviceScheduleService.savePrestador(prestadorServico);
+            return ResponseEntity.ok().build();
+        } catch (PrestadorDuplicadoException ex) {
+            return ResponseEntity.status(HttpStatus.UNPROCESSABLE_ENTITY).contentType(MediaType.APPLICATION_JSON).body(ex.getMessage());
+        }
     }
 
     @DeleteMapping("/{id}")
@@ -63,14 +68,16 @@ public class ServiceScheduleController {
     }
 
     @PostMapping("/{id}/horarios")
-    public ResponseEntity<Void> associarHorariosAoPrestador(
+    public ResponseEntity<String> associarHorariosAoPrestador(
             @PathVariable Long id,
             @RequestBody List<Horario> horarios) {
         try {
             serviceScheduleService.associarHorariosAoPrestador(id, horarios);
             return ResponseEntity.ok().build();
         } catch (PrestadorNaoEncontradoException ex) {
-            return ResponseEntity.notFound().build();
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).contentType(MediaType.APPLICATION_JSON).body(ex.getMessage());
+        } catch (HorarioDuplicadoException ex) {
+            return ResponseEntity.status(HttpStatus.UNPROCESSABLE_ENTITY).contentType(MediaType.APPLICATION_JSON).body(ex.getMessage());
         }
     }
 
@@ -82,26 +89,30 @@ public class ServiceScheduleController {
     }
 
     @PostMapping("/{idPrestador}/horarios/{idHorario}/agendar")
-    public ResponseEntity<Void> alterarDisponibilidadeHorario(
+    public ResponseEntity<String> alterarDisponibilidadeHorario(
             @PathVariable Long idPrestador,
             @PathVariable Long idHorario) {
         try {
             serviceScheduleService.alterarDisponibilidadeHorario(idPrestador, idHorario);
             return ResponseEntity.ok().build();
-        } catch (PrestadorNaoEncontradoException | HorarioNaoEncontradoException | HorarioNaoDisponivelException ex) {
-            return ResponseEntity.notFound().build();
+        } catch (PrestadorNaoEncontradoException | HorarioNaoEncontradoException ex) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).contentType(MediaType.APPLICATION_JSON).body(ex.getMessage());
+        } catch (HorarioNaoDisponivelException ex) {
+            return ResponseEntity.status(HttpStatus.UNPROCESSABLE_ENTITY).contentType(MediaType.APPLICATION_JSON).body(ex.getMessage());
         }
     }
 
     @PostMapping("/{idPrestador}/horarios/{idHorario}/cancelar-agenda")
-    public ResponseEntity<Void> alterarDisponibilidadeHorarioParaTrue(
+    public ResponseEntity<String> alterarDisponibilidadeHorarioParaTrue(
             @PathVariable Long idPrestador,
             @PathVariable Long idHorario) {
         try {
             serviceScheduleService.alterarDisponibilidadeHorarioParaTrue(idPrestador, idHorario);
             return ResponseEntity.ok().build();
-        } catch (PrestadorNaoEncontradoException | HorarioNaoEncontradoException | HorarioDisponivelException ex) {
-            return ResponseEntity.notFound().build();
+        } catch (PrestadorNaoEncontradoException | HorarioNaoEncontradoException ex) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).contentType(MediaType.APPLICATION_JSON).body(ex.getMessage());
+        } catch (HorarioDisponivelException ex) {
+            return ResponseEntity.status(HttpStatus.UNPROCESSABLE_ENTITY).contentType(MediaType.APPLICATION_JSON).body(ex.getMessage());
         }
     }
 
